<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorPatientSelect">

    <Button
        android:id="@+id/doctorbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/doctorbutton"
        android:textSize="25sp"
        android:padding="20dp"
        android:layout_toStartOf="@id/container_center"
        android:layout_marginEnd="15dp"
        android:background="#008080"
        android:textColor="#FFFFFF"
        android:onClick="doctorRegistration"
        />

    <Button
        android:id="@+id/container_center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="0dp"
        android:layout_height="0dp"
        />

    <Button
        android:id="@+id/patientbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_alignTop="@id/doctorbutton"
        android:layout_toEndOf="@+id/container_center"
        android:layout_marginStart="15dp"
        android:padding="20dp"
        android:textColor="#FFFFFF"
        android:text="@string/patientbutton"
        android:background="#008080"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/doctorbutton"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="#000000"
        android:paddingBottom="20dp"
        android:text="@string/SelectText" />
</RelativeLayout>